[package]
name = "near-lake-pulse"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
actix-web = "=4.0.1"
clap = { version = "3.0.0-beta.5", features = ["color", "derive", "env"] }
futures = "0.3.5"
itertools = "0.9.0"
lazy_static = "^1.4"
prometheus = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

near-lake-framework = { git = "https://github.com/near/near-lake-framework", rev = "582c2996b77eb3a2ea96bca839249f55c209a015" }
