[package]
name = "near-lake-pulse"
version = "0.2.0"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
actix-web = "=4.0.1"
clap = { version = "3.1.6", features = ["color", "derive", "env"] }
futures = "0.3.5"
itertools = "0.9.0"
lazy_static = "^1.4"
prometheus = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
tokio = { version = "1.8", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

near-lake-framework = "0.4.0"
